Feature #3833 - adding the notification sending on attendee response about events handled by personal application "My Diary" - using StringTemplate - using new User Notification API
Conflicts:

	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda.properties
	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_fr.properties

--- a/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_de.properties
@@ -200,13 +200,10 @@ agenda.minutes = Minuten
 agenda.hostName = Mein Computer
 
 #Notifications
+titleCreate = Neues Rendezvous
 titleUpdate = Benachrichtigung \u00fcber \u00c4nderungen eines Rendezvous
 titleDelete = Benachrichtigung zur l\u00f6schung eines Rendezvous
-subject = Ihr Rendezvous benannt 
-with = mit
-delayed = wurde verschoben am
-planned = geplant am
-removed = wurde gel\u00f6scht. 
+titleAttend = Notification zur eines Rendezvous
 
 # Rss
 agenda.agenda = Kalender
