--- a/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_en.properties
@@ -200,13 +200,10 @@ agenda.hostName = My computer
 agenda.CopyPhotoLink = To copy the link to the diary of this user : Right click then 'Copy shortcut'
 
 #Notifications
+titleCreate = New appointment
 titleUpdate = Notification of event change in the diary
 titleDelete = Notification of event remove in the diary
-subject = Your event in the diary titled
-with = with
-delayed = has been changed to date 
-planned = planned at 
-removed = has been removed. 
+titleAttend = Notification of event in the diary
 
 #Rss
 agenda.agenda = Diary
