--- a/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_fr.properties
@@ -199,13 +199,10 @@ agenda.minutes = minutes
 agenda.hostName = Mon ordinateur
 
 #Notifications
+titleCreate = Nouveau RDV
 titleUpdate = Notification de changement d'un RDV
 titleDelete = Notification de suppression d'un RDV
-subject = Votre rendez-vous intitul\u00E9
-with = avec
-delayed = a \u00E9t\u00E9 d\u00E9cal\u00E9 le
-planned = pr\u00E9vu le
-removed = a \u00E9t\u00E9 supprim\u00E9.
+titleAttend = Notification de participation \u00e0 un RDV
 
 #Rss
 agenda.agenda = Agenda
