Feature #3639 - adding application quotas into Silverpeas backoffice for SAAS using

--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -42,6 +42,11 @@ JSPP.updateHomePage = Startseite
 JSPP.SpaceTemplate = Bereichvorlagen
 JSPP.NoTemplate = Leerbereich
 JSPP.UPSpaceTemplateProfile = Die der Rolle zugewiesenen Gruppen/Benutzer w\u00e4hlen
+JSPP.componentSpaceQuotaMaxCount = Maximum number of applications
+JSPP.componentSpaceQuotaMaxCountHelp = 0 for unlimited
+JSPP.componentSpaceQuotaUsed = Number of applications
+JSPP.componentSpaceQuotaCurrentCount = {0} {0,choice, 1#registered application| 1<registered applications}
+JSPP.componentSpaceQuotaFull = The maximum number of applications is reached
 
 JSPP.welcome =  Willlommen im Bereichverwaltungs-Modul
 
@@ -88,9 +93,9 @@ JSPP.roleDescription = Beschreibung der Rolle
 
 # erreurs
 MustContainsText = muss eingegeben werden
-ThisFormContains = Achtung, dieses Formular enth\u00e4lt 
-ContainsTooLargeText = darf nicht \u00fcbersteigen 
-NbMaxTextArea = 2000 
+ThisFormContains = Achtung, dieses Formular enth\u00e4lt
+ContainsTooLargeText = darf nicht \u00fcbersteigen
+NbMaxTextArea = 2000
 Characters = Zeichen
 JSPP.MustBeginsByHTTP = muss ein mit http:// beginnendes URL enthalten
 
@@ -102,7 +107,7 @@ JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diese Anwendung l\u00f6s
 JSPP.MessageSuppressionInstanceEnd = \u003C--\\n
 
 # onglets roles
-JSPP.Manager = Bereich Verwalter 
+JSPP.Manager = Bereich Verwalter
 JSPP.admin = Verwalter
 JSPP.publisher = Herausgeber
 JSPP.writer = Redaktor
@@ -172,9 +177,9 @@ JSPP.SpaceAppearance = Aussehen
 JSPP.SpaceLook = Thema
 JSPP.WallPaper = Bandbild
 
-JSPP.inProgress =Wird bearbeitet !<br/>Bitte warten... 	  	 
-JSPP.parameters = Einstellungen 	  	 
-  	  	 
+JSPP.inProgress =Wird bearbeitet !<br/>Bitte warten...
+JSPP.parameters = Einstellungen
+
 JSPP.SpaceHomepage.URL.help = Mehrere Werte sind f\u00fcr das <b>URL</b>-Feld m\u00f6glich: <ul><li>Absolut Pfad. Beispiel: http://www.google.com</li><li>Interne Adresse. Beispiel: /admin/jsp/page.jsp (Kontext nicht angeben /silverpeas)</li><li>Interne Adresse zu einer anderen Web-Anwendung. Beispiel: <b>$</b>/weblib/pages/page.jsp (Beginnen mit $/<nom_application_web>)</li></ul>
 JSPP.spaceRecover = Rechte wiederherstellen
 JSPP.applications.add = Diese Anwendung hinzuf\u00fcgen
