--- a/config-core/src/main/config/silvertrace/messages/jobStartPagePeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/jobStartPagePeasMessages_en.properties
@@ -24,4 +24,5 @@
 # MODULE : jobStartPagePeas
 #
 # ex : jobStartPagePeas.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
-
+jobStartPagePeas.CANT_PAST_COMPONENT = Unable to copy the application
+jobStartPagePeas.EX_PASTE_ERROR = An error occurred while copying application
