--- a/config-core/src/main/config/silvertrace/messages/jobStartPagePeasMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/jobStartPagePeasMessages_fr.properties
@@ -24,3 +24,5 @@
 # MODULE : jobStartPagePeas
 #
 # ex : jobStartPagePeas.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
+jobStartPagePeas.CANT_PAST_COMPONENT = Impossible de copier l'application
+jobStartPagePeas.EX_PASTE_ERROR = Une erreur s'est produite lors de la copie
