--- a/config-core/src/main/config/properties/org/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -92,7 +92,7 @@ pdcPeas.editPosition                   = Edit the position
 pdcPeas.deletePosition                 = Delete the position
 pdcPeas.deletedPosition                = Position deleted
 pdcPeas.saveThePosition                = Save the above position
-pdcPeas.inheritedPositions             = Positions from the parent topic
+pdcPeas.inheritedPositions             = Positions from the parent folder
 
 pdcPeas.path                           = Path
 pdcPeas.variant                        = Variant
@@ -306,7 +306,7 @@ external.search.server.2.label=My external server 2
 pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
 pdcPeas.MustBeClassified = The classification is mandatory to create a contribution.<br />Please set a position with the mandatory axes.
 pdcPeas.theContent=This contribution
-pdcPeas.CanDoAPredefineClassification = You can set a default classification for publications of the topic <strong>{0}</strong>. <br /> If this topic will use the classification defined for the parent topic.
+pdcPeas.CanDoAPredefineClassification = You can set a default classification for publications of the folder <strong>{0}</strong>. <br /> If not, this folder will use the classification defined for the parent folder.
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications
 search.type.2.label= Events
