Feature #3839 : adding a Silverpeas Token API & REST Web-Services authentication by token. - displaying user token in his profile - adding Cross-Origin Resource Sharing (CORS) handling - modifying space and component REST Web-Service to be compliant with user token handling (because of using some UI services which are not accessible via user authentication by tokens)

--- a/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_en.properties
@@ -61,6 +61,7 @@ myProfile.OldPassword = Old password
 myProfile.NewPassword = New password
 myProfile.NewPasswordConfirm = Confirm new password
 myProfile.WrongNewPwd = Wrong password confirmation...
+myProfile.Token = Token
 myProfile.MessageOK = Your profile has been successfully updated...
 myProfile.Error_bad_credential = Bad credentials, try again...
 myProfile.Error_unknown = Unable to update your profile, please contact your Administrator
@@ -129,7 +130,7 @@ myContactProfile.tab.profile = Profile
 myContactProfile.tab.wall = Wall
 myContactProfile.contacts.common = common contacts
 
-profil.subnav.display=Display : 
+profil.subnav.display=Display :
 profil.subnav.identity=Identity
 
 invitation.send = Send an invitation
