--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -23,6 +23,7 @@
 #
 
 templateDesigner.toolName = Formular-Designer
+templateDesigner.preview = Preview
 templateDesigner.template = Formular
 templateDesigner.visibility = Sichtbarkeit
 templateDesigner.visible = Sichtbar
@@ -32,6 +33,11 @@ templateDesigner.newTemplate = Erstellen eines neuen Formulars
 templateDesigner.image = Vignette
 templateDesigner.searchable = Suche
 templateDesigner.file = Datei
+
+templateDesigner.header.fieldset.main = Main information
+templateDesigner.header.visible.spaces = Concerned space(s)
+templateDesigner.header.visible.applications = Concerned application(s)
+templateDesigner.header.visible.instances = Concerned instance(s)
 
 templateDesigner.fields = Formular-Felder
 templateDesigner.field = Formular-Feld
