--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -22,6 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 templateDesigner.toolName = Designer de formulaires
+templateDesigner.preview = Pr\u00e9visualisation
 templateDesigner.template = Formulaire
 templateDesigner.visibility = Visibilit\u00e9
 templateDesigner.visible = Visible
@@ -31,6 +32,11 @@ templateDesigner.newTemplate = Cr\u00e9er un nouveau formulaire
 templateDesigner.image = Vignette
 templateDesigner.searchable = Recherche
 templateDesigner.file = Fichier
+
+templateDesigner.header.fieldset.main = Informations principales
+templateDesigner.header.visible.spaces = Espace(s) concern\u00e9(s)
+templateDesigner.header.visible.applications = Application(s) concern\u00e9e(s)
+templateDesigner.header.visible.instances = Instance(s) concern\u00e9e(s)
 
 templateDesigner.fields = Champs du formulaire
 templateDesigner.field = Champ de formulaire
