--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -22,6 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 templateDesigner.toolName = Form designer
+templateDesigner.preview = Preview
 templateDesigner.template = Form
 templateDesigner.visibility = Visibility
 templateDesigner.visible = Visible
@@ -31,6 +32,11 @@ templateDesigner.newTemplate = Create a new form
 templateDesigner.image = Image
 templateDesigner.searchable = Searchable
 templateDesigner.file = File
+
+templateDesigner.header.fieldset.main = Main information
+templateDesigner.header.visible.spaces = Concerned space(s)
+templateDesigner.header.visible.applications = Concerned application(s)
+templateDesigner.header.visible.instances = Concerned instance(s)
 
 templateDesigner.fields = Form fields
 templateDesigner.field = Form field
