integrating feature #3839 enhancing identity tab on "My profile" (using fieldset)

--- a/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_de.properties
@@ -61,7 +61,7 @@ myProfile.OldPassword = Altes Passwort
 myProfile.NewPassword = Neues Passwort
 myProfile.NewPasswordConfirm = Neues Passwort best\u00e4tigen
 myProfile.WrongNewPwd = Falsche Passwort Best\u00e4tigung...
-myProfile.Token = Token
+myProfile.Token = API Token
 myProfile.MessageOK = Ihr Profil wurde erfolgreich aktualisiert...
 myProfile.Error_bad_credential = Ihr Kennwort ist inkorrekt
 myProfile.Error_unknown = Unm\u00f6glich, Ihr Profil zu aktualisieren, wenden Sie sich bitte an Ihrem Administrator,
@@ -72,6 +72,8 @@ myProfile.WrongLength = Die L\u00e4nge des Kennwortes ist ungen\u00fcgend!
 myProfile.NoSpacesInPassword = Das Passwort darf keine Leerzeichen enthalten!
 myProfile.LoginQuestion = Frage im Falle dass Sie Ihr Kennwort Vergessen
 myProfile.LoginAnswer = Antwort auf die Frage
+myProfile.identity.fieldset.main = Main information
+myProfile.identity.fieldset.extra = Extra information
 
 myProfile.settings.FavoriteLanguage = Sprache
 myProfile.settings.language_fr = Franz\u00f6sisch
