--- a/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_en.properties
@@ -61,7 +61,7 @@ myProfile.OldPassword = Old password
 myProfile.NewPassword = New password
 myProfile.NewPasswordConfirm = Confirm new password
 myProfile.WrongNewPwd = Wrong password confirmation...
-myProfile.Token = Token
+myProfile.Token = API Token
 myProfile.MessageOK = Your profile has been successfully updated...
 myProfile.Error_bad_credential = Bad credentials, try again...
 myProfile.Error_unknown = Unable to update your profile, please contact your Administrator
@@ -72,6 +72,8 @@ myProfile.WrongLength = Incorrect password length!
 myProfile.NoSpacesInPassword = The password must not contain any blank spaces!
 myProfile.LoginQuestion = Question if password has been forgotten
 myProfile.LoginAnswer = Answer to the question
+myProfile.identity.fieldset.main = Main information
+myProfile.identity.fieldset.extra = Extra information
 
 myProfile.settings.FavoriteLanguage = Language
 myProfile.settings.language_fr = French
