--- a/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle_fr.properties
@@ -61,7 +61,7 @@ myProfile.OldPassword = Ancien mot de passe
 myProfile.NewPassword = Nouveau mot de passe
 myProfile.NewPasswordConfirm = Confirmation du nouveau mot de passe
 myProfile.WrongNewPwd = La confirmation du mot de passe est incorrecte...
-myProfile.Token = Token
+myProfile.Token = Jeton de l'API
 myProfile.MessageOK = Votre profil a \u00e9t\u00e9 mis \u00e0 jour avec succ\u00e8s...
 myProfile.Error_bad_credential = Votre mot de passe est incorrect
 myProfile.Error_unknown = Impossible de modifier votre profil, veuillez contacter votre administrateur
@@ -72,6 +72,8 @@ myProfile.WrongLength = La longueur du mot de passe est insuffisante !
 myProfile.NoSpacesInPassword = Le mot de passe ne doit pas contenir d'espace !
 myProfile.LoginQuestion = Question en cas d'oubli de mot de passe
 myProfile.LoginAnswer = R\u00e9ponse \u00e0 la question
+myProfile.identity.fieldset.main = Informations principales
+myProfile.identity.fieldset.extra = Informations compl\u00e9mentaires
 
 myProfile.settings.FavoriteLanguage = Langue
 myProfile.settings.language_fr = Fran\u00e7ais
