Feature #4000 : adding a new Javascript plugin which centralizes the verification of Dates filled by users. A try on TODO tool from personal space. Trying to perform unit tests of methods included in the JavaScript plugin.

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
@@ -244,6 +244,7 @@ GML.MustContainsCorrectDate = muss ein Datum enthalten
 GML.MustContainsPostDateTo = muss ein Datum enthalten, das sp\u00e4ter ist als
 GML.MustContainsPostOrEqualDateTo = muss ein datum enthalten, das sp\u00e4ter ist als oder gleich ist wie
 GML.MustContainsPostDate = muss ein Datum enthalten, das nach dem heutigen Datum liegt
+GML.MustContainsPostOrEqualDate = muss ein Datum enthalten, das nach oder gleich dem heutigen Datum liegt
 GML.MustContainsDateBetween1 = muss ein Datum enthalten zwischen dem
 GML.MustContainsDateBetween2 = und dem
 GML.MustContainsCorrectHour = muss eine korrekte Uhrzeit enthalten
