--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -239,6 +239,7 @@ GML.MustContainsCorrectDate = must contain a date
 GML.MustContainsPostDateTo = must contain a post date to
 GML.MustContainsPostOrEqualDateTo = must contain a post or equal date to
 GML.MustContainsPostDate = must contain a post date
+GML.MustContainsPostOrEqualDate = must contain a post or equal date
 GML.MustContainsDateBetween1 = must contain a between
 GML.MustContainsDateBetween2 = and
 GML.MustContainsCorrectHour = must contain a correct hour
