--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
@@ -28,6 +28,7 @@ authentication.logon.login = Login
 authentication.logon.password = Password
 authentication.logon.domain = Domain
 authentication.logon.passwordForgotten = Have you forgotten your password ?
+authentication.logon.changePassword = Change my password
 authentication.logon.passwordRemember = Remember the password ?
 authentication.logon.newRegistration.tease = New user ?
 authentication.logon.newRegistration.create = Register yourself
