bug #4014 :  Add localized label of 'next groups' and fix a little bug with the rendering of the next groups link

--- a/config-core/src/main/config/properties/org/silverpeas/selection/multilang/selectionBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/selection/multilang/selectionBundle_de.properties
@@ -50,3 +50,4 @@ selection.SelectedUsers=Auswahl
 selection.SelectedGroups=Auswahl
 selection.MyContacts=Meine Kontakte
 selection.SelectedUserOrGroup=Exklusive Auswahl
+selection.NextGroups=Weiter Gruppen...
