--- a/config-core/src/main/config/properties/org/silverpeas/selection/multilang/selectionBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/selection/multilang/selectionBundle_en.properties
@@ -50,3 +50,4 @@ selection.SelectedUsers=Selection
 selection.SelectedGroups=Selection
 selection.MyContacts=My contacts
 selection.SelectedUserOrGroup=Unique selection
+selection.NextGroups=Next groups...
