Feature #4142 : adding password services (including password rule management). - adding new services to manage passwords by a centralized way (rules, checks, generation) - adding new password WEB Services - adding new Silverpeas JQuery plugin to manage passwords - wiring user profile with the new Silverpeas JQuery Plugin - wiring administration user creation and modification with the new Silverpeas JQuery Plugin - wiring user CSV import with the new password checking services - fixing some problems in user credential management - wiring force password change with the new Silverpeas JQuery Plugin - wiring password about to expire with the new Silverpeas JQuery Plugin - wiring password expired with the new Silverpeas JQuery Plugin - wiring reset password with the new Silverpeas JQuery Plugin - removing parameters that become unused in property files - modifying copyrights on login page

--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
@@ -56,8 +56,7 @@ JDP.groupExport = Gruppe exportieren
 
 JDP.missingFieldStart = Das Feld '
 JDP.missingFieldEnd = ' ist obligatorisch
-JDP.minLength = ' muss mindestens enthalten
-JDP.noSpaces = ' darf keinen Zwischenraum enthalten
+JDP.pwdError = ' enth\u00e4lt ein falsches Passwort
 JDP.confirmPwdError = Passw\u00f6rter stimmen nicht \u00fcberein.
 
 JDP.name = Name
@@ -96,6 +95,7 @@ JDP.userRights = Rechte
 JDP.userSynchro = Einen Benutzer synchronisieren
 JDP.userUnsynchro = Synchronisation eines Benutzers l\u00f6schen
 JDP.userUpdate = Informationen des Benutzers editieren
+JDP.pwdTitleErrors = Die folgenden Regeln nicht eingehalten werden:
 
 JDP.welcome =  Willkommen im Verweis-Modul
 
