--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -55,8 +55,7 @@ JDP.groupExport = Export the group
 
 JDP.missingFieldStart = The field '
 JDP.missingFieldEnd = ' is missing
-JDP.minLength = ' must contain at least
-JDP.noSpaces = ' must not contain any spaces
+JDP.pwdError = ' contains an incorrect password
 JDP.confirmPwdError = These passwords don't match.
 
 JDP.name = Name
@@ -83,7 +82,6 @@ JDP.obligatoire = This is a required field
 JDP.nbCarMax = The value must not be greater than
 JDP.nbCarMin = The value must contain at least
 JDP.caracteres = characters
-JDP.espaces = The value must not contain any spaces
 JDP.existingLogin = This login is already used
 JDP.valeursPossibles = The possible values are: 'Admin', 'AdminPdc', 'AdminDomain', 'User' or 'Guest'
 JDP.userDel = Delete a user
@@ -96,6 +94,7 @@ JDP.userRights = Rights
 JDP.userSynchro = Synchronize a user
 JDP.userUnsynchro = Delete the user synchronization
 JDP.userUpdate = Edit the user data
+JDP.pwdTitleErrors = The following rules are not observed:
 
 JDP.welcome =  Welcome to the Register module
 
