--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
@@ -187,7 +187,7 @@ GML.noLockedFile           = Keine reservierte Datei!
 
 # Window title
 GML.popupTitle						= Silverpeas
-GML.trademark						= Copyright 2001-2012 Silverpeas - All Rights Reserved
+GML.trademark						= &copy; 2001-2013 <a href\="http\://www.silverpeas.com" target\="_blank">Silverpeas</a> - All rights reserved
 
 # Formulaire
 GML.thefield						= Dieses Feld
