--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_de.properties
@@ -56,8 +56,7 @@ authentication.password.init = Re-setting your password
 authentication.password.old = Old password
 authentication.password.new = New password
 authentication.password.confirm = Confirmation
-authentication.password.length = (at least * characters)
-authentication.password.length.alert = Your password must contain at least * characters
+authentication.password.error = Bad credentials, try again...
 authentication.password.different = The answer and confirmation are not the same
 authentication.password.aboutToExpire = Your password is about to expire. It is strongly recommended to change it as soon as possible.
 authentication.password.expired = Your password has expired. You must change it to access the application.
