bug #4106 :  In order to send statistics on sessions closed at Silverpeas shutdown, the remaining opened sessions cleaning up is hooked to the runtime shutdown

--- a/config-core/src/main/config/silvertrace/messages/peasCoreMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/peasCoreMessages_fr.properties
@@ -56,3 +56,6 @@ peasCore.MSG_END_OF_HTTPSESSION = Fin de la session http
 peasCore.EX_CANT_CREATE_PROD_CONNECTION = Problem in opening the Prod Connection
 peasCore.EX_CANT_CREATE_ADMIN_CONNECTION = Problem in opening the Admin Connection
 peasCore.EX_UNABLE_TO_REMOVE_EJB = Impossible de liberer l'ejb
+
+peasCore.MSG_SERVICE_STARTING = D\u00e9marrage du service
+peasCore.MSG_SERVICE_STOPPING = Arr\u00eat du service
