--- a/config-core/src/main/config/silvertrace/messages/peasCoreMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/peasCoreMessages_en.properties
@@ -57,3 +57,6 @@ peasCore.MSG_END_OF_HTTPSESSION = End of http session
 peasCore.EX_CANT_CREATE_PROD_CONNECTION = Problem in opening the Prod Connection
 peasCore.EX_CANT_CREATE_ADMIN_CONNECTION = Problem in opening the Admin Connection
 peasCore.EX_UNABLE_TO_REMOVE_EJB = Problem removing ejb
+
+peasCore.MSG_SERVICE_STARTING = Service starting
+peasCore.MSG_SERVICE_STOPPING = Service stopping
