Feature information pop-up : adding information pop-up into Silverpeas pop-up JQuery plugin (width OK button). Modifying also of an error on LogoutServlet.java

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
@@ -340,6 +340,7 @@ GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert aus
 GML.validation.create=Die Informationen wurden aufgezeichnet.
 GML.validation.update=Die Informationen wurden aktualisiert.
 GML.validation.delete=Die Informationen wurden gel\u00f6scht.
+GML.information.dialog.title = Informationen
 GML.confirmation.dialog.title = Best\u00E4tigung
 GML.preview = Preview file
 GML.preview.dialog.title = Preview
