--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -333,6 +333,7 @@ GML.internalDomain=Shared domain
 GML.validation.create=The informations have been well recorded.
 GML.validation.update=The informations have been well updated.
 GML.validation.delete=The informations have been well deleted.
+GML.information.dialog.title = Information
 GML.confirmation.dialog.title = Confirmation
 GML.preview = Preview file
 GML.preview.dialog.title = Preview
