Feature #4142 : adding password services (including password rule management). - modifying rules named "At least one ..." to rules named "At least X ..." (behavior modification included) - adding sequential character forbidden password rule - adding combination password rule mechanism

--- a/config-core/src/main/config/properties/org/silverpeas/password/multilang/passwordBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/password/multilang/passwordBundle_en.properties
@@ -23,10 +23,14 @@
 #
 
 password.rule.requirements=Password must meet the following requirements:
+password.rule.combination={0} of following rules :
 password.rule.minLength.description=at least * characters
 password.rule.maxLength.description=at most * characters
 password.rule.blankForbidden.description=no blank space
-password.rule.atLeastOneUppercase.description=at least one uppercase
-password.rule.atLeastOneLowercase.description=at least one lowercase
-password.rule.atLeastOneDigit.description=at least one digit
-password.rule.atLeastOneSpecialChar.description=at least one special character (*)
+password.rule.sequentialForbidden.description=no identical characters which follow themselves
+password.rule.atLeastXUppercase.description=at least * uppercase
+password.rule.atLeastXLowercase.description=at least * lowercase
+password.rule.atLeastXDigit.description=at least * digit
+password.rule.atLeastXSpecialChar.description=at least * special character(s) (*)
+password.checking.error.message=Password doesn't meet the following requirements: *
+password.checking.combined.error.message=Password must meet * of the following requirements: *
