--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_de.properties
@@ -63,6 +63,7 @@ authentication.password.aboutToExpire = Your password is about to expire. It is 
 authentication.password.expired = Your password has expired. You must change it to access the application.
 authentication.password.change = Change password
 authentication.password.remindMeLater = Remind me later
+authentication.password.showRules = See password policies
 
 registration.title = Registration
 registration.noSilverpeasAccount = You don't have yet created an account
