feature #82 : Better dialog for delete file confirmation

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-suppressionConfirmation = Sind Sie sicher, die beigef\u00fcgte Datei l\u00f6schen zu wollen?
+suppressionConfirmation = Sind Sie sicher, die beigef\u00fcgte Datei l\u00f6schen zu wollen
 taille = Gr\u00f6sse
 downloadInProgress = Herunterladung l\u00e4uft...
 fichierJoint = Beizuf\u00fcgende Datei
@@ -80,7 +80,7 @@ attachment.notifUserLib = ist abgelaufen und wurde freigegeben
 
 attachment.suppressionWhichTranslations = Die Datei "*" Die Sie l\u00f6schen wollen hat mehrere \u00dcbersetzungen.<br/>Was m\u00f6chten Sie l\u00f6schen ?
 
-attachment.suppressionConfirmation = Sind Sie sicher die Datei "*" l\u00f6schen zu wollen ?
+attachment.suppressionConfirmation = Sind Sie sicher die Datei l\u00f6schen zu wollen 
 
 attachment.allTranslations = Alle \u00dcbersetzungen
 
