--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -68,8 +68,7 @@ attachment.notifUserLib = has expired and was unlocked
 
 attachment.suppressionWhichTranslations = The file "*" you want to remove has several translations.<br/>Which translation do you want to remove?
 
-attachment.suppressionConfirmation = Are you sure to want to remove the file "*" ?
-
+attachment.suppressionConfirmation = Are you sure to want to remove the file 
 attachment.allTranslations = All translations
 
 attachment.warning.checkin.locked=The file is being edited online.<br/>Close it before releasing it.
