Feature #4149 : user account validity - adding action menus to block or unblock users (administration) - adding blocked user management around user log in - adding blocked user management around WEB-Services - adding blocked user management around user blocked whereas a session is alive - formatting the jsp files at webapp root - formatting userContent.jsp file - adjusting some unit tests

--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
@@ -85,6 +85,8 @@ JDP.nbCarMin = Der Wert muss mindestens enthalten
 JDP.caracteres = Zeichen
 JDP.existingLogin = Dieses Login wird bereits verwendet
 JDP.valeursPossibles = Die m\u00f6glichen Werte sind: 'Admin', 'AdminPdc', 'AdminDomain', 'User' oder 'Guest'
+JDP.userBlock = Nutzer blockieren
+JDP.userUnblock = Nutzer entsperren
 JDP.userDel = Einen Benutzer l\u00f6schen
 JDP.userDelConfirm = Sind Sie sicher, diesen Benutzer l\u00f6schen zu wollen?
 JDP.userImport = Einen Benutzer importieren
@@ -92,6 +94,7 @@ JDP.userManage = Liste der Benutzer \u00e4ndern
 JDP.userPanelAccess = Einen Benutzer oder eine Gruppe suchen
 JDP.userRemove = Einen Benutzer l\u00f6schen
 JDP.userRights = Rechte
+JDP.userState = Zustand
 JDP.userSynchro = Einen Benutzer synchronisieren
 JDP.userUnsynchro = Synchronisation eines Benutzers l\u00f6schen
 JDP.userUpdate = Informationen des Benutzers editieren
