--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -84,6 +84,8 @@ JDP.nbCarMin = The value must contain at least
 JDP.caracteres = characters
 JDP.existingLogin = This login is already used
 JDP.valeursPossibles = The possible values are: 'Admin', 'AdminPdc', 'AdminDomain', 'User' or 'Guest'
+JDP.userBlock = Block a user
+JDP.userUnblock = Unblock a user
 JDP.userDel = Delete a user
 JDP.userDelConfirm = Do you really want to delete this user?
 JDP.userImport = Import a user
@@ -91,6 +93,7 @@ JDP.userManage = Modify the user list
 JDP.userPanelAccess = Look for a user or group
 JDP.userRemove = Remove a user
 JDP.userRights = Rights
+JDP.userState = State
 JDP.userSynchro = Synchronize a user
 JDP.userUnsynchro = Delete the user synchronization
 JDP.userUpdate = Edit the user data
