--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -134,8 +134,6 @@ GML.path						= Location
 GML.phoneNumber 				= Phone
 GML.position 					= Position
 GML.public 						= Public
-GML.preview					    = Preview
-GML.view							= View
 GML.previous					= Previous
 GML.print						= Print
 GML.priority 					= Priority
@@ -327,6 +325,13 @@ GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
 GML.internalDomain=Shared domain
+
+# User account
+GML.user.account.state.UNKNOWN=Unknown state of user account
+GML.user.account.state.VALID=Valid account
+GML.user.account.state.BLOCKED=Blocked account
+GML.user.account.state.EXPIRED=Expired account
+GML.user.account.state.DELETED=Deleted account
 
 # Common messages
 GML.validation.create=The informations have been well recorded.
