integrating feature #4149 adding new column "last connection" when browsing domains and groups using generic terms instead of specific ones removing useless terms in multilang files replacing some old code

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
@@ -334,6 +334,7 @@ GML.user.account.state.VALID=G\u00fcltiges Konto
 GML.user.account.state.BLOCKED=Sperrkonto
 GML.user.account.state.EXPIRED=Abgelaufen Konto
 GML.user.account.state.DELETED=Gel\u00f6schtes Konto
+GML.user.lastConnection = letzte Verbindung
 
 # Common messages
 GML.validation.create=Die Informationen wurden aufgezeichnet.
