--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -332,6 +332,7 @@ GML.user.account.state.VALID=Valid account
 GML.user.account.state.BLOCKED=Blocked account
 GML.user.account.state.EXPIRED=Expired account
 GML.user.account.state.DELETED=Deleted account
+GML.user.lastConnection = Last connection
 
 # Common messages
 GML.validation.create=The informations have been well recorded.
