--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
@@ -38,6 +38,9 @@ authentication.logon.passwordReinit = Give me a new password...
 authentication.logon.with.linkedin = Log in with LinkedIn
 authentication.logon.with.facebook = Log in with Facebook
 
+# Number of connexion attempts
+authentication.attempts.remaining = * connexion attempt(s) remaining before blocking your account
+
 # login errors
 authentication.logon.1 = Login or password incorrect
 authentication.logon.2 = Technical problem
