--- a/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle_de.properties
@@ -35,5 +35,9 @@ directory.breadcrumb.4 = Gruppen-Verzeichnis
 directory.breadcrumb.5 = Domain-Verzeichnis
 directory.breadcrumb.6 = Bereich-Verzeichnis
 
+directory.sort = Sort : 
+directory.sort.alpha = Alphabetical
+directory.sort.newest = Last recorded
+
 directory.query.error.title = Suche unm\u00f6glich
 directory.query.error.msg = Die Zeichen * und ? sind <b>Platzhalter</b>.<br/>Sie k\u00f6nnen nicht am Anfang eines Wortes verwendet werden.<br/><br/>Wir danken Ihnen, den Antrag zu korrigieren und Ihre Suche neu zu starten...
