closing feature #3689 by adding second part of the feature Displaying a help message which is managed by a cookie However, this message can be displayed at any time when clicking on the 'Help' link This message can be customized with the help of StringTemplate

--- a/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle_de.properties
@@ -41,3 +41,5 @@ directory.sort.newest = Last recorded
 
 directory.query.error.title = Suche unm\u00f6glich
 directory.query.error.msg = Die Zeichen * und ? sind <b>Platzhalter</b>.<br/>Sie k\u00f6nnen nicht am Anfang eines Wortes verwendet werden.<br/><br/>Wir danken Ihnen, den Antrag zu korrigieren und Ihre Suche neu zu starten...
+
+directory.help.title = HELP - Finding a person in the directory
