--- a/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle_en.properties
@@ -16,3 +16,5 @@ directory.sort.newest = Last recorded
 
 directory.query.error.title = Impossible search
 directory.query.error.msg = Characters * and ? are <b>wildcards</b>.<br/>It can not be used at the beginning of a term.<br/><br/>Please correct the query and restart your search...
+
+directory.help.title = HELP - Finding a person in the directory
