--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
@@ -340,6 +340,7 @@ GML.user.lastConnection = letzte Verbindung
 GML.validation.create=Die Informationen wurden aufgezeichnet.
 GML.validation.update=Die Informationen wurden aktualisiert.
 GML.validation.delete=Die Informationen wurden gel\u00f6scht.
+GML.help.dialog.title = Hilfe
 GML.information.dialog.title = Informationen
 GML.confirmation.dialog.title = Best\u00E4tigung
 GML.preview = Preview file
@@ -352,3 +353,6 @@ GML.view.dialog.title = View
 GML.view.dialog.title.of = of
 GML.Today=Heute
 GML.Tomorrow=Morgen
+
+GML.help.cookie.buttons.ok = Ich habe verstanden
+GML.help.cookie.buttons.remind = Mich daran erinnern
