--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -338,6 +338,7 @@ GML.user.lastConnection = Last connection
 GML.validation.create=The informations have been well recorded.
 GML.validation.update=The informations have been well updated.
 GML.validation.delete=The informations have been well deleted.
+GML.help.dialog.title = Help
 GML.information.dialog.title = Information
 GML.confirmation.dialog.title = Confirmation
 GML.preview = Preview file
@@ -351,3 +352,6 @@ GML.view.dialog.title.of = of
 GML.Today=Today
 GML.Tomorrow=Tomorrow
 GML.operations=Operations
+
+GML.help.cookie.buttons.ok = I understood
+GML.help.cookie.buttons.remind = Remind me
