--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_fr.properties
@@ -339,6 +339,7 @@ GML.user.lastConnection = Derni\u00e8re connexion
 GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
 GML.validation.update=Les informations ont bien \u00e9t\u00e9 mises \u00e0 jour.
 GML.validation.delete=Les informations ont bien \u00e9t\u00e9 supprim\u00e9es.
+GML.help.dialog.title = Aide
 GML.information.dialog.title = Information
 GML.confirmation.dialog.title = Confirmation
 GML.preview = Pr\u00e9visualiser le fichier
@@ -352,3 +353,6 @@ GML.view.dialog.title.of = de
 GML.Today=Aujourd'hui
 GML.Tomorrow=Demain
 GML.affichierCalendrier=Afficher le calendrier
+
+GML.help.cookie.buttons.ok = J'ai compris
+GML.help.cookie.buttons.remind = Me le rappeler
