--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
@@ -39,7 +39,7 @@ authentication.logon.with.linkedin = Log in with LinkedIn
 authentication.logon.with.facebook = Log in with Facebook
 
 # Number of connexion attempts
-authentication.attempts.remaining = * connexion attempt(s) remaining before blocking your account
+authentication.attempts.remaining = * connection attempt(s) remaining before blocking your account
 
 # login errors
 authentication.logon.1 = Login or password incorrect
@@ -47,7 +47,7 @@ authentication.logon.2 = Technical problem
 authentication.logon.3 = Your session has expired
 authentication.logon.4 = You are not logged on
 authentication.logon.5 = No account linked to your social network account
-authentication.logon.Error_UserAccountBlocked = Your account is blocked, please contact an administrator
+authentication.logon.Error_UserAccountBlocked = Your account is blocked<br/>Please contact an administrator
 
 authentication.reminder.label = Please answer the personal question below
 authentication.reminder.noQuestion = You have not yet chosen a personal question. If you forget your password, this question will allow you to reset it.
