--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
@@ -38,7 +38,7 @@ authentication.logon.passwordReinit = Give me a new password...
 authentication.logon.with.linkedin = Log in with LinkedIn
 authentication.logon.with.facebook = Log in with Facebook
 
-# Number of connexion attempts
+# Number of connection attempts
 authentication.attempts.remaining = * connection attempt(s) remaining before blocking your account
 
 # login errors
