--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication_en.properties
@@ -48,6 +48,7 @@ authentication.logon.3 = Your session has expired
 authentication.logon.4 = You are not logged on
 authentication.logon.5 = No account linked to your social network account
 authentication.logon.Error_UserAccountBlocked = Your account is blocked<br/>Please contact an administrator
+authentication.logon.Error_PwdMustBeChangedOnFirstLogin = You must change your password on your first login
 
 authentication.reminder.label = Please answer the personal question below
 authentication.reminder.noQuestion = You have not yet chosen a personal question. If you forget your password, this question will allow you to reset it.
