closing main part of feature #4277

--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -180,6 +180,7 @@ JSPP.inheritanceToUse = um die Rechte des Bereichs zu benutzen.
 JSPP.SpaceAppearance = Aussehen
 JSPP.SpaceLook = Thema
 JSPP.WallPaper = Bandbild
+JSPP.CSS = Styles
 
 JSPP.inProgress =Wird bearbeitet !<br/>Bitte warten...
 JSPP.parameters = Einstellungen
