--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -179,7 +179,8 @@ JSPP.inheritanceToUse = to use the space's rights.
 
 JSPP.SpaceAppearance = Skin
 JSPP.SpaceLook = Theme
-JSPP.WallPaper = Header
+JSPP.WallPaper = Banner
+JSPP.CSS = Styles
 
 JSPP.inProgress = Processing!<br/>Please wait...
 JSPP.parameters = Parameters
