--- a/config-core/src/main/config/silvertrace/messages/utilMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/utilMessages_fr.properties
@@ -25,26 +25,26 @@
 #
 # ex : util.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
 
-util.MSG_EXCEPTION_NOT_EMBEDED = Exception non encapsulée dans une Silverpeas...Exception
+util.MSG_EXCEPTION_NOT_EMBEDED = Exception non encapsulï¿½e dans une Silverpeas...Exception
 util.EX_SAX_EXCEPTION_OCCUR = Une erreur s'est produite dans le parseur XML
 
 # NEW NEW NEW
 #
 util.MSG_IMOSSIBLE_UNDO_TRANS  = Impossible d'annuler la transaction
-util.MSG_NO_RECORD_FOUND  =  Pas de résultat, la mise à jour a été effectuée mais pas la sélection
-util.MSG_ERROR_LOADING_PROPS    = Problème dans le chargement du fichier propertie
+util.MSG_NO_RECORD_FOUND  =  Pas de rï¿½sultat, la mise ï¿½ jour a ï¿½tï¿½ effectuï¿½e mais pas la sï¿½lection
+util.MSG_ERROR_LOADING_PROPS    = Problï¿½me dans le chargement du fichier propertie
 util.MSG_NO_PROPERTY_FILE  = Pas de fichier propertie 
 util.MSG_NO_ATTR_VALUE  = Pas de valeur pour cet attribut
 util.EX_LOADING_ERROR  = Erreur lors du chargement
-util.EX_NO_CHEMIN_REPOS  =  Le chemin spécifié n'est pas un répertoire
-util.EX_REPOSITORY_CREATION  = Problème dans la création du répertoire
-util.EX_REPOSITORY_RENAME  = Problème dans le renommage du répertoire
-util.EX_REPOSITORY_DELETE = Problème dans la destruction du répertoire
-util.EX_CREATE_FILE_ERROR  = Le chemin spécifié pour insérer la page n'est pas un répertoire 
-util.EX_RENAME_FILE_ERROR  = Problème dans le renommage du fichier
-util.EX_NO_CHEMIN_FINCHER  = Le chemin spécifié n'est pas un fichier
-util.EX_DELETE_FILE_ERROR  = Problème dans la destruction du fichier
-util.EX_WRONG_CHEMLIN_SPEC  =  Le chemin spécifié pour récupérer le code de la page n'est pas un répertoire
+util.EX_NO_CHEMIN_REPOS  =  Le chemin spï¿½cifiï¿½ n'est pas un rï¿½pertoire
+util.EX_REPOSITORY_CREATION  = Problï¿½me dans la crï¿½ation du rï¿½pertoire
+util.EX_REPOSITORY_RENAME  = Problï¿½me dans le renommage du rï¿½pertoire
+util.EX_REPOSITORY_DELETE = Problï¿½me dans la destruction du rï¿½pertoire
+util.EX_CREATE_FILE_ERROR  = Le chemin spï¿½cifiï¿½ pour insï¿½rer la page n'est pas un rï¿½pertoire 
+util.EX_RENAME_FILE_ERROR  = Problï¿½me dans le renommage du fichier
+util.EX_NO_CHEMIN_FINCHER  = Le chemin spï¿½cifiï¿½ n'est pas un fichier
+util.EX_DELETE_FILE_ERROR  = Problï¿½me dans la destruction du fichier
+util.EX_WRONG_CHEMLIN_SPEC  =  Le chemin spï¿½cifiï¿½ pour rï¿½cupï¿½rer le code de la page n'est pas un rï¿½pertoire
 util.CAN_T_CLOSE_RESULTSET = Impossible de fermer le ResultSet JDBC
 util.CAN_T_CLOSE_STATEMENT = Impossible de fermer le Statement JDBC
 util.CAN_T_CLOSE_CONNECTION = Impossible de fermer la Connexion JDBC
@@ -52,22 +52,23 @@ util.CAN_T_ROLLBACK_CONNECTION = Impossible d'annuler la Transaction JDBC
 
 
 # FileRepositoryManager
-util.CANT_GET_FILESIZE = Impossible de récupérer la taille du fichier
+util.CANT_GET_FILESIZE = Impossible de rï¿½cupï¿½rer la taille du fichier
 
 # Zip Manager
-util.EXE_SOURCE_FILE_ATTRIBUTE_MUST_BE_SPECIFIED = Le fichier source doit etre spécifié
-util.EXE_DESTINATION_FILE_ATTRIBUTE_MUST_BE_SPECIFIED = Le fichier destination doit être spécifié
+util.EXE_SOURCE_FILE_ATTRIBUTE_MUST_BE_SPECIFIED = Le fichier source doit etre spï¿½cifiï¿½
+util.EXE_DESTINATION_FILE_ATTRIBUTE_MUST_BE_SPECIFIED = Le fichier destination doit ï¿½tre spï¿½cifiï¿½
 util.EXE_ERROR_WHILE_EXPANDING_FILE = Erreur pendant l'extraction du fichier
 util.EXE_ERROR_WHILE_CLOSING_ZIPINPUTSTREAM = Impossible de fermer le zipInputStream
 util.EXE_ERROR_WHILE_COUNTING_FILE = Impossible de compter le nombre de fichiers du zip
 
 # MSdocumentPropertiesManager
-util.EXE_CANT_GET_SUMMARY_INFORMATION = Impossible de récupérer les propriétés Office du document
-util.EXE_CANT_GET_PROPERTY_VALUE = Impossible de récupérer la valeur de la propriété
-util.EXE_CANT_WRITE_PROPERTY_VALUE = Impossible de modifier la valeur de la propriété
+util.EXE_CANT_GET_SUMMARY_INFORMATION = Impossible de rï¿½cupï¿½rer les propriï¿½tï¿½s Office du document
+util.EXE_CANT_GET_PROPERTY_VALUE = Impossible de rï¿½cupï¿½rer la valeur de la propriï¿½tï¿½
+util.EXE_CANT_WRITE_PROPERTY_VALUE = Impossible de modifier la valeur de la propriï¿½tï¿½
 
 # CSV
 util.EX_TRANSMITING_CSV = Une erreur est survenue lors de la transmission du fichier CSV
-util.EX_PARSING_CSV_VALUE = Le fichier CSV est non conforme à ce qui est attendu : 
+util.EX_PARSING_CSV_VALUE = Le fichier CSV est non conforme ï¿½ ce qui est attendu : 
 
+util.
 
