--- a/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
@@ -42,7 +42,7 @@ JMAP = Maintenance
 JST = Console Silvertrace
 JTD = Formulaires
 portlets = Portlets
-reindexation=Réindexation
+reindexation=R\u00e9indexation
 JAB = A propos...
 
 JKM1 = Axes
@@ -67,3 +67,4 @@ JMAP.header1 = Gestion globale du mode Maintenance
 JMAP.maintenanceOnAir = L'application est actuellement en mode maintenance....
 JMAP.active = Activer
 JMAP.desactive = D\u00e9sactiver
+JCIPHER=Cl\u00e9 de cryptage de contenu
