Feature #351 : adding possibility to force a subscription to a user or a group of users - adding a centralized screen to manage forced subscriptions - integrating Aurore's work

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -150,6 +150,7 @@ GML.search						= Search
 GML.size						= Size
 GML.space						= Workspace
 GML.status						= Status
+GML.manageSubscriptions = Manage subscriptions
 GML.subscription                = Subscription
 GML.subscribe                   = Subscribe
 GML.unsubscribe                 = Unsubscribe
