--- a/config-core/src/main/config/properties/org/silverpeas/crypto/multilang/cryptoBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/crypto/multilang/cryptoBundle_de.properties
@@ -1,7 +1,7 @@
 
 crypto.cipherKeyImport=Import eines Chiffrierschl\u00fcssels
 crypto.cipherKey=Chiffrierschl\u00fcssels:
-crypto.importDescription=The cipher key must be in 256 bits in order to be used by the AES-256 algorithm to encrypt the data in Silverpeas.\nThe value expected here must be in hexadecimal.\nOnce the key is imported, the cipher of the encrypted content will be then renewed with this new key; during this operation the encrypted content could'nt be accessed by the users.
+crypto.importDescription=The cipher key expected here must be in hexadecimal and encoded in 256 bits.\nOnce the key is imported, the cipher of the encrypted content will be then renewed with this new key, this is can take a long time. During this operation, the encrypted content could'nt be accessed.
 crypto.import=Importieren
 crypto.importOk=The key import has succeeded and the cipher of the encrypted content has been renewed.
 crypto.keyNotInHexadecimal=The key to import isn't in hexadecimal!
