--- a/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
@@ -70,4 +70,4 @@ JMAP.header1 = Gesamtverwaltung des Wartungs-Modus
 JMAP.maintenanceOnAir = Die Anwendung befindet gegenw\u00e4rtig im Wartungs-Modus....
 JMAP.active = Aktivieren
 JMAP.desactive = Deaktivieren
-JCIPHER=Inhalt Chiffrierschl\u00fcssel
+JCIPHER=Content-Verschl\u00e4sselung
