--- a/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
@@ -66,4 +66,4 @@ JMAP.header1 =  Maintenance mode management
 JMAP.maintenanceOnAir = The site is currently in Maintenance mode...
 JMAP.active = Enable
 JMAP.desactive = Disable
-JCIPHER=Content cipher key
+JCIPHER=Content encryption
