starting feature #4371 managing new property 'dataEncrypted' of form encrypting/decrypting existing data when 'dataEncrypted' is turn on/off adding a factory of ContentEncryptionService

--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -38,6 +38,7 @@ templateDesigner.header.fieldset.main = Main information
 templateDesigner.header.visible.spaces = Concerned space(s)
 templateDesigner.header.visible.applications = Concerned application(s)
 templateDesigner.header.visible.instances = Concerned instance(s)
+templateDesigner.header.encrypted = Encrypted data
 
 templateDesigner.fields = Formular-Felder
 templateDesigner.field = Formular-Feld
