--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -37,6 +37,7 @@ templateDesigner.header.fieldset.main = Informations principales
 templateDesigner.header.visible.spaces = Espace(s) concern\u00e9(s)
 templateDesigner.header.visible.applications = Application(s) concern\u00e9e(s)
 templateDesigner.header.visible.instances = Instance(s) concern\u00e9e(s)
+templateDesigner.header.encrypted = Donn\u00e9es crypt\u00e9es
 
 templateDesigner.fields = Champs du formulaire
 templateDesigner.field = Champ de formulaire
