--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -37,6 +37,7 @@ templateDesigner.header.fieldset.main = Main information
 templateDesigner.header.visible.spaces = Concerned space(s)
 templateDesigner.header.visible.applications = Concerned application(s)
 templateDesigner.header.visible.instances = Concerned instance(s)
+templateDesigner.header.encrypted = Encrypted data
 
 templateDesigner.fields = Form fields
 templateDesigner.field = Form field
